Fix internationalization: update Java 22->21, use Locale.of() for modern locale handling
Co-authored-by: Marvi217 <162788508+Marvi217@users.noreply.github.com>